--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -15,19 +15,40 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout_5">
+    <property name="spacing">
+     <number>4</number>
+    </property>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="QLabel" name="label">
         <property name="text">
-         <string>Charset:</string>
+         <string>Arabic:</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="lineEdit">
+       <widget class="QLineEdit" name="lineArabic">
         <property name="text">
          <string>                                 !&quot;#$%&amp;'()*+,-./0123456789:;&lt;=&gt;?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\]^_`abcdefghijklmnopqrstuvwxyz{|}~</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_7">
+      <item>
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>Symbols:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="lineSymbols">
+        <property name="text">
+         <string>!&quot;#$%&amp;'()*+,-./0123456789:;&lt;=&gt;?@[\]^_`{|}~¦«»</string>
         </property>
        </widget>
       </item>
@@ -378,6 +399,8 @@
    <zorder>groupBox</zorder>
    <zorder>groupBox_2</zorder>
    <zorder>widgetCharInfo</zorder>
+   <zorder>label_2</zorder>
+   <zorder>lineSymbols</zorder>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
