--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -57,21 +57,21 @@
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_5">
       <item>
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="pushChangeFont">
         <property name="text">
          <string>Select font...</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton_6">
+       <widget class="QPushButton" name="pushFgColor">
         <property name="text">
          <string>Font color...</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton_7">
+       <widget class="QPushButton" name="pushBgColor">
         <property name="text">
          <string>background color...</string>
         </property>
@@ -89,13 +89,6 @@
          </size>
         </property>
        </spacer>
-      </item>
-      <item>
-       <widget class="QPushButton" name="pushButton_5">
-        <property name="text">
-         <string>Arabic Text</string>
-        </property>
-       </widget>
       </item>
      </layout>
     </item>
@@ -236,21 +229,21 @@
        </spacer>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton_2">
+       <widget class="QPushButton" name="pushGenerateImage">
         <property name="text">
          <string>Generate</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton_8">
+       <widget class="QPushButton" name="pushCleanImage">
         <property name="text">
          <string>Clean image</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton_3">
+       <widget class="QPushButton" name="pushCharMap">
         <property name="text">
          <string>View map</string>
         </property>
@@ -387,7 +380,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton_4">
+       <widget class="QPushButton" name="pushSaveImage">
         <property name="text">
          <string>Save Image</string>
         </property>
@@ -399,8 +392,6 @@
    <zorder>groupBox</zorder>
    <zorder>groupBox_2</zorder>
    <zorder>widgetCharInfo</zorder>
-   <zorder>label_2</zorder>
-   <zorder>lineSymbols</zorder>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
